fix: projects grid doesn't fit all images properly

--- a/css/main.scss
+++ b/css/main.scss
@@ -412,7 +412,7 @@ header {
 /* About me */
 
 .about-me {
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
 
     img {
@@ -470,7 +470,8 @@ header {
 .portfolio {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    margin: 0, auto;
+    max-width: 1200px;
+    margin: 0 auto;
 
     .portfolio__item {
         background: var(--clr-accent);
